<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2021-2022 The "Open Radio" Project. Author: Chernyshov Yuriy

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="about_exo_title">Playback</string>
    <string name="about_exo_text">ExoPlayer</string>
    <string name="about_radio_browser_title">Community Radio Browser</string>
    <string name="about_graphics">Graphics</string>
    <string name="about_graphics_link">Vector assets from Android Studio</string>
    <string name="about_author">Author</string>
    <string name="about_author_name">Yurii Chernyshov</string>
    <string name="about_home_title">Project home</string>
    <string name="about_report_issue">Report issue</string>
    <string name="about_playlist_title">Playlist</string>
    <string name="about_playlist_url">Java Playlist Parser</string>
    <string name="about_countries_boundaries_title">Offline countries</string>
    <string name="about_countries_boundaries_name">Tobias Zwick</string>
    <string name="link_text">Link</string>
    <string name="enable_last_known_radio_station_label">Play last known Radio Station\n(enables application to play last known Radio Station automatically on start)</string>
    <string name="bt_auto_restart_descr">Resume playback when re-connected to the same Bluetooth Device</string>
    <string name="custom_user_agent_label">Custom User Agent:</string>
    <string name="custom_user_agent_hint">Custom User Agent empty</string>
    <string name="user_agent_empty_warning">User Agent can not be empty</string>
    <string name="settings_master_volume">Master volume:</string>
    <string name="min_buff_description">Minimum duration of media that the player will attempt to ensure is buffered at all times, in milliseconds</string>
    <string name="max_buff_description">Maximum duration of media that the player will attempt to buffer, in milliseconds</string>
    <string name="playback_buffer_description">Duration of media that must be buffered for playback to start or resume, in milliseconds</string>
    <string name="playback_buffer_after_rebuffer_description">Duration of media that must be buffered for playback to resume after a re-buffer, in milliseconds</string>
    <string name="restore_default">Restore Default</string>
    <string name="google_drive_error_when_save">Error while save Radio Stations to Google Drive</string>
    <string name="google_drive_error_when_read">Error while read Radio Stations from Google Drive</string>
    <string name="google_drive_data_saved">Radio Stations are saved to Google Drive</string>
    <string name="google_drive_data_read">Radio Stations are read from Google Drive</string>
    <string name="can_not_get_account_name">Can not get Google Account name</string>
    <string name="google_drive">Google Drive</string>
    <string name="google_drive_init_warning">Initial connection may take a long time.</string>
    <string name="google_drive_upload_info">Upload Favorites and Local added Radio Stations to Google Drive.\nNOTE: This operation will overwrite Radio Stations uploaded previously!</string>
    <string name="upload">Upload</string>
    <string name="google_drive_download_info">Download Favorites and Local added Radio Stations from Google Drive.</string>
    <string name="can_not_play_station">Can not play Station</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="app_settings_title">Application Settings</string>
    <string name="stream_buffering_label">@string/buffering</string>
    <string name="stream_buffering_descr">Restart playback when values are changed\nRange is %1$d - %2$d milliseconds\n(%3$d second - %4$d minutes)</string>
    <string name="invalid_buffer_desc">Invalid value of buffer : </string>
    <string name="search_label">Search</string>
    <string name="content_description_category_icon">Category Icon</string>
    <string name="search_description">Type the word that you want to use as the search pattern</string>
    <string name="add_station_dialog_title">Add Radio Station</string>
    <string name="add_station_dialog_button_label">Add</string>
    <string name="remove_station_dialog_button_label">Remove</string>
    <string name="remove_station_dialog_main_text">You are going to remove Radio Station:\n%s\nAre You sure?</string>
    <string name="add_station_home_page_label">Home page:</string>
    <string name="add_station_home_page_hint">Radio Station\'s home page</string>
    <string name="add_station_name_label">Name:</string>
    <string name="add_station_name_hint">Radio Station\'s name</string>
    <string name="add_station_url_label">Stream URL:</string>
    <string name="add_station_url_hint">Radio Station\'s stream</string>
    <string name="add_station_image_label">Local Image:</string>
    <string name="add_station_web_image_label">Web Image:</string>
    <string name="add_station_image_hint">Radio Station\'s image for Local</string>
    <string name="add_station_web_image_hint">Radio Station\'s web image for Server</string>
    <string name="add_station_genre_label">Genre:</string>
    <string name="add_station_country_label">Country:</string>
    <string name="ellipsis">…</string>
    <string name="can_not_open_file">Can not open File</string>
    <string name="download">Download</string>
    <string name="add_to_fav_string">Add to Favorites</string>
    <string name="add_to_srvr_string">Add to Server</string>
    <string name="edit_station_dialog_title">Edit Radio Station</string>
    <string name="edit_station_dialog_button_label">Edit</string>
    <string name="can_not_edit_station_label">Can not edit Radio Station</string>
    <string name="equalizer_presets_label">System presets:</string>
    <string name="eq_not_available">Equalizer is not available</string>
    <string name="main_menu_general">General</string>
    <string name="main_menu_buffering">@string/buffering</string>
    <string name="main_menu_network">@string/network</string>
    <string name="main_menu_source">@string/source</string>
    <string name="main_menu_google_drive">Google Drive</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_sleep_timer">Sleep Timer</string>
    <string name="easy_swipe_title">Swipe effect</string>
    <string name="easy_swipe_name">Easy Swipe Maker</string>
    <string name="min_buffer_greater_max_buffer">Min Buffer is greater than Max Buffer</string>
    <string name="play_buffer_greater_min_buffer">Play Buffer is greater than Min Buffer</string>
    <string name="play_re_buffer_greater_min_buffer">Play Re-Buffer is greater than Min Buffer</string>
    <string name="cache_desc_text">Browse requests to the service are cached for one day.</string>
    <string name="clear_cache_lbl">Clear cache</string>
    <string name="default_country_label">Default country:</string>
    <string name="date_lbl">Date</string>
    <string name="time_lbl">Time</string>
    <string name="can_not_set_time">Can not set Time</string>
    <string name="can_not_set_date">Can not set Date</string>
    <string name="use_mobile_network">Use Mobile network</string>
    <string name="support_ivan_text">If you like Open Radio</string>
    <item type="id" name="imageUpdated" />
    <item type="id" name="imageId" />
</resources>
