<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2020 The "Open Radio" Project. Author: Chernyshov Yuriy

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_about_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_about_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_author" />

            <TextView
                android:id="@+id/about_author_link_view"
                style="@style/about_item_text"
                android:text="@string/about_author_name" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_home_title" />

            <TextView
                android:id="@+id/about_project_link_view"
                style="@style/about_item_text"
                android:text="@string/app_name" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_report_issue" />

            <TextView
                android:id="@+id/about_report_issue_link_view"
                style="@style/about_item_text"
                android:text="@string/link_text" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_radio_browser_title" />

            <TextView
                android:id="@+id/about_radio_browser_link_view"
                style="@style/about_item_text"
                android:text="@string/link_text" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_graphics" />

            <TextView
                style="@style/about_item_text"
                android:text="@string/about_graphics_link" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_exo_title" />

            <TextView
                android:id="@+id/about_exo_player_ver_link_view"
                style="@style/about_item_text" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_playlist_title" />

            <TextView
                android:id="@+id/about_playlist_parser_name_view"
                style="@style/about_item_text"
                android:text="@string/about_playlist_url" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/about_countries_boundaries_title" />

            <TextView
                android:id="@+id/about_countries_boundaries_view"
                style="@style/about_item_text"
                android:text="@string/about_countries_boundaries_name" />

        </LinearLayout>

        <LinearLayout style="@style/about_item_layout">

            <TextView
                style="@style/about_item_label"
                android:text="@string/easy_swipe_title" />

            <TextView
                android:id="@+id/about_easy_swipe_name_view"
                style="@style/about_item_text"
                android:text="@string/easy_swipe_name" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/or_color_white" />

        <TextView
            style="@style/about_item_label"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/support_ivan_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/about_item_ivan_fb_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:src="@drawable/ivan_fb" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ivan_logo" />

            <ImageView
                android:id="@+id/about_item_ivan_ig_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:src="@drawable/ivan_ig" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
